nlamah/src/main/resources/org/nlamah/QL/test/qls/error/doublepropertydeclarationerror.ql
form test
{
	question1 number "Test"
}